--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-import sklearn
-import lightgbm
-import xgboost
-import numpy
-import pandas
+streamlit==1.32.0
+scikit-learn==1.6.1
+lightgbm==4.6.0
+xgboost==2.0.3
+numpy==1.26.4
+pandas==2.1.4
+scipy==1.11.4
+joblib==1.3.2
