--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.32.0
-scikit-learn==1.6.1
-lightgbm==4.6.0
+streamlit
+scikit-learn==1.4.2
+lightgbm==4.3.0
 xgboost==2.0.3
 numpy==1.26.4
-pandas==2.1.4
-scipy==1.11.4
+pandas==2.2.2
 joblib==1.3.2
+
