--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit
-numpy
-pandas
-scikit-learn
-joblib
+streamlit==1.36.0
+scikit-learn==1.4.2
+numpy==1.26.4
+pandas==2.2.2
+scipy==1.11.4
+joblib==1.4.2
+lightgbm==4.3.0
+xgboost==2.0.3
