--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 streamlit
-numpy
-pandas
-scikit-learn
-joblib
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.4.2
+joblib==1.4.2
+xgboost==2.0.3
+lightgbm==4.6.0
